Fix scroll error covering below footer menu bar on android browser

--- a/cmd/dcrdata/public/scss/scroller.scss
+++ b/cmd/dcrdata/public/scss/scroller.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  overflow: hidden;
+  overflow: visible;
 
   .top-nav {
     height: 70px;
